2010-08-06  David Reveman  <davidr@novell.com>

	* rect.h:
	* rect.cpp: Add Rect::Transform (cairo_t *cr).

	* shape.cpp (DoDraw): Use extents instead of bounds.

	* uielement.cpp: Don't use GetLocalBounds in back-to-front
	render pass.

	* border.cpp (Render):
	* glyphs.cpp (Render):
	* media.cpp (Render):
	* mediaelement.cpp (Render):
	* panel.cpp (Render):
	* richtextbox.cpp (Render):
	* shape.cpp (DoDraw):
	* stylus.cpp (PostRender):
	* textbox.cpp (Render):
	* uielement.cpp (RenderClipPath): Remove unnecessary use of
	ApplyTransform.

2010-08-05  David Reveman  <davidr@novell.com>

	* uielement.cpp (ComputeTransform): Use Matrix3D::Init instead
	of memcpy. Look for RENDER_PROJECTION flag instead of
	projection property when determening whether we inherit an
	affine or perspective transformation.

	* projection.h:
	* projection.cpp: Add Matrix3D::Init.

	* effect.h:
	* effect.cpp: Add MAX_SHADOW_DEPTH and clamp drop shadow
	depth value to 0.0-300.0 range.

	* effect.cpp: Clamp drop shadow opacity value to 0.0-1.0
	range.

	* effect.cpp (UpdateShader): Pre-multiply shadow color.

	* effect.cpp (Render): Fix typo that had rgba values set
	incorrectly. We should of course multiply r/g/b components
	with the opacity value.

2010-08-04  David Reveman  <davidr@novell.com>

	* projection.cpp (UpdateProjection): Fix translate direction of
	LocalOffsetY.

	* uielement.cpp (DoRender): Only call Render when
	ContextNode::GetCr return a valid cairo context.

2010-08-03  Jeffrey Stedfast  <fejj@novell.com>

	* multiscaleimage.cpp (UpdateIdleStatus): Renamed from
	UpdateIsDownloading().
	(TileOpened): Don't update IsIdle/IsDownloading status here, wait
	for ::Render(). We don't want IsIdle to be set to true or
	IsDownloading to be set to false before we get a chance to render
	the result.
	(TileFailed): Same.
	(StopDownloading): Same.
	(OnPropertyChanged): Instead of calling UpdateIsDownloading()
	here, Invalidate () and let the next render take care of that.